Changed the styling of the logo and the title. I did this as I noticed originally an error in the mobile view of the PWA where the logo was overlapping the title. To fix this I have implamented it so that on mobile veiw the logo will go into its own row above the Heading.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,12 +28,13 @@ body {
     background-color: #3b0b53;
 }
 
-.logo{
+.logo {
     opacity: 100%;
     max-height: 60px;
+    max-width: 100%;
     width: auto;
+    height: auto;
 }
-
 .Tunabtn{
     align-content: center;
     text-align: center;
